Adds responsiveness to splash landing

--- a/src/global.css
+++ b/src/global.css
@@ -67,6 +67,16 @@ body {
   overflow: hidden;
   font-family: OurCustomFont;
 }
+@media only screen and (max-width: 1200px) {
+  body {
+    position: fixed;
+    height: -webkit-fill-available;
+  }
+  html {
+    min-height: 100vh;
+    min-height: -webkit-fill-available;
+  }
+}
 
 nav {
   position: fixed;
@@ -121,6 +131,11 @@ nav {
 .controlsLast {
   margin-right: 120px;
 }
+@media only screen and (max-width: 1200px) {
+  .controlsLast {
+    margin-right: 16px;
+  }
+}
 .controlsButton {
   background: transparent;
   border: none;
@@ -131,9 +146,14 @@ nav {
 .menuButton {
   margin-right: 32px;
   margin-top: 7px;
-  font-family: IBM;
+  font-family: 'neue-haas-grotesk-display';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 18px;
+  letter-spacing: 0.05em;
   text-decoration: none;
-  color: var(--control-grey);
+  color: #F2F2F2;
 }
 .menuButton:hover {
   text-decoration: underline;
@@ -253,6 +273,17 @@ main {
   overflow: hidden;
   background-repeat: no-repeat;
 }
+@media only screen and (max-width: 1200px) {
+  footer {
+    position: relative;
+
+  }
+  main {
+    overflow-y: scroll;
+    height: calc(100vh - var(--footer-size));
+    width: 100vw;
+  }
+}
 #adminLogo {
   display: block;
 }
@@ -304,6 +335,11 @@ main {
   height: 99px;
   text-transform: uppercase;
   z-index: 9998;
+}
+@media only screen and (max-width: 1200px) {
+  .mainWalletContainer {
+    right: 128px;
+  }
 }
 #mainDisconnect {
   background-color: var(--splash-color);
@@ -712,7 +748,7 @@ h1 {
   background-color: var(--splash-color);
 }
 .musicControlsSliderWhite {
-  background-color: white;
+  background-color: #F2F2F2;
 }
 .musicControlsSlider::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -1052,7 +1088,6 @@ h1 {
 }
 
 #splash-1-Footer {
-  position: absolute;
   background: transparent;
   z-index: 2;
   margin-top: 14px;
@@ -1086,10 +1121,58 @@ h1 {
   left: 0;
   z-index: 3;
 }
+@media only screen and (max-width: 1200px) {
+  #splash-1-nav {
+    justify-content: space-between;
+  }
+  #splash-1-Footer {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100vw;
+  }
+  #splash-1-Footer ul {
+    width: 100%;
+    justify-content: space-evenly;
+    margin: 0;
+    margin-bottom: 16px;
+  }
+  #splash-1-Footer ul li {
+    margin: 8px;
+  }
+}
 #splash-1-nav img {
   justify-self: flex-start;
   margin-top: 14px;
   margin-bottom: 14px;
+}
+
+#splash-1-menu-container {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: var(--nav-size);
+  left: 0;
+  background-color: red;
+/*  height: 500px;*/
+  width: 100%;
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
+  background: rgba(255, 255, 255, 0.05);
+  z-index: 5;
+}
+.hamburgerElement {
+  padding: 16px;
+  font-family: Inter;
+  text-decoration: none;
+}
+.hamburgerElement:hover {
+  text-decoration: underline;
+}
+
+.hamburgerIcon {
+  margin-left: 16px;
+  background: none;
+  border: none;
 }
 
 .splashLogo {
@@ -1159,20 +1242,20 @@ h1 {
 #splashInfoFlex {
   /*grid-area: info;*/
   display: flex;
-  color: white;
   background: rgba(255, 255, 255, 0.05);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   flex-direction: column;
+  margin-top: var(--spacing-5);
   margin-left: 60px;
-  padding: 10px 10px 0 10px;
+  padding: 10px 10px 10px 10px;
   border-radius: 25px;
 }
 #splashInfoFlex::-webkit-scrollbar {
   display: none;
 }
 #splashDesc {
-  max-height: 30vh;
+  max-height: 27vh;
   overflow-y: scroll;
   overflow-x: visible;
   -ms-overflow-style: none;  /* IE and Edge */
@@ -1196,14 +1279,16 @@ h1 {
 
 #splashSmallInfoBox {
   flex-grow: 1;
+  margin-top: var(--spacing-5);
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  align-items: last baseline;
+  justify-content: space-between;
 }
 .splashSmallInfoBoxElement {
   height: 60px;
 }
 #splashTitle {
-  margin-top: var(--spacing-5);
   margin-bottom: var(--spacing-5);
 }
 .splashInfoElementFirst {
@@ -1268,6 +1353,67 @@ h1 {
 .splash-eq {
   position: absolute;
   left: 000px;
+}
+@media only screen and (max-width: 1200px) {
+  #splashLandingGrid {
+    grid-template-rows: auto auto;
+    grid-template-columns: none;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  #splashPicture {
+    height: auto;
+    width: 100vw;
+    margin: 0;
+  }
+  #splashInfoFlex {
+    margin-left: 0;
+    margin-top: 0;
+    width: 94vw;
+    border-radius: 0;
+  }
+  #splashTitle {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 36px !important;
+  }
+  #splashArtistDescBox {
+    grid-template-columns: none;
+    grid-template-rows: auto auto;
+    grid-gap: 24px;
+    width: 100%;
+  }
+  #splashDesc {
+    max-height: none;
+    overflow-y: visible;
+  }
+  .splashOneObject {
+    display: none;
+    background: red ;
+  }
+  .splash-eq {
+    display: none;
+  }
+  #splashSmallInfoBox {
+    flex-wrap: wrap;
+    margin-top: 0;
+  }
+  .splashSmallInfoBoxNearPrice {
+    flex-basis: 100%;
+    flex-grow: 1;
+    text-align: end;
+  }
+  .splashInfoElementSecond {
+    flex-grow: 0;
+  }
+  #splashBuy {
+    margin-left: 0;
+    flex-grow: 1;
+    text-align: center;
+  }
+  .splashSmallInfoBoxElement {
+    height: auto;
+  }
 }
 
 /*#colorContainer {
@@ -1457,4 +1603,14 @@ h1 {
 .player-loader{
   max-width: 100%;
   border-radius: inherit;
+}
+@media only screen and (max-width: 1200px) {
+  #Player-canvas {
+    width: 100vw;
+    height: 100vw;
+  }
+  .splash-eq {
+    top: calc(var(--nav-size) + 0);
+    left: 0;
+  }
 }
