--- a/src/global.css
+++ b/src/global.css
@@ -232,6 +232,33 @@ nav {
   background-color: #4d00b4;
 }
 
+#dropdownContainer {
+  position: absolute;
+  background: #FFFFFF;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
+  border-radius: 1px;
+  right: 478px;
+  top: var(--nav-size);
+}
+#dropdownContainer a {
+  font-family: Inter;
+  text-transform: uppercase;
+  color: #333333;
+  width: 180px;
+  padding: 10px;
+  margin: 0;
+  border-bottom: solid #E0E0E0 1px;
+}
+.mobileDropdownContainer {
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
+.mobileDropdownContainer a {
+  width: 100% !important;
+  display: block;
+}
+
 footer {
   position: absolute;
   background: transparent;
@@ -1251,6 +1278,7 @@ h1 {
   line-height: 18px;
   letter-spacing: 0.05em;
   text-decoration: none;
+  text-transform: uppercase;
   text-align: center;
   color: #F2F2F2;
 }
