Adds background video

--- a/src/global.css
+++ b/src/global.css
@@ -1621,6 +1621,17 @@ h1 {
   max-width: 85%;
   z-index: 2;
 }
+#splash5BackgroundVideo {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+}
 .splashInfoElementFirst {
   margin-right: var(--spacing-3);
 }
