--- a/src/global.css
+++ b/src/global.css
@@ -1011,8 +1011,8 @@ h1 {
   background: white;
 }
 #nftDetailsModalPicture img {
-  max-width: 90%;
-  max-height: 90%;
+  max-width: 80%;
+  max-height: 80%;
 }
 #nftDetailsModalRightSide {
   display: flex;
@@ -1173,6 +1173,7 @@ h1 {
 
 @media only screen and (max-width: 1200px) {
   .nftDetailsModal {
+    width: 100vw;
     grid-template-columns: none;
     grid-template-rows: auto auto;
     grid-gap: 0;
@@ -1180,13 +1181,13 @@ h1 {
     overflow-y: scroll;
   }
   #nftDetailsModalPicture {
-    height: 100vw;
-    width: 100vw;
     margin: 0;
+    margin-top: 64px;
   }
   #nftDetailsModalPicture img {
-    width: 100vw;
-    height: 100vw;
+    margin: 32px;
+    padding: 32px;
+    width: 70vw;
     max-width: none;
     max-height: none;
   }
@@ -1281,6 +1282,8 @@ h1 {
 @media only screen and (max-width: 1200px) {
   #transferPopup {
     left: 0;
+    bottom: 200px;
+    top: auto;
     width: calc(100% - 64px);
   }
   #transferPopupWrapper {
