--- a/src/global.css
+++ b/src/global.css
@@ -1809,7 +1809,26 @@ h1 {
   color: yellow;
   cursor: pointer;
 }
-
+#splashBuy7 {
+  margin-left: calc((386px / 2) + 44px);
+  margin-top: var(--spacing-2);
+  position: relative;
+  z-index: 2;
+}
+#splashBuy7 button {
+  background: #9A2DDD;
+  color: #F2F2F2;
+  border-radius: 50px;
+  border: none;
+  width: 96px;
+  height: 39px;
+}
+#splashBuy7 button:hover {
+  background: #F2F2F2;
+  color: #9A2DDD;
+  border: 2px solid #9A2DDD;
+  cursor: pointer;
+}
 
 .splash-eq {
   position: absolute;
@@ -1910,6 +1929,11 @@ h1 {
   }
   #splashBuy6 {
     margin: auto;
+    text-align: center;
+  }
+  #splashBuy7 {
+    margin: auto;
+    padding: var(--spacing-2);
     text-align: center;
   }
   #splashLandingGrid5 {
