--- a/src/global.css
+++ b/src/global.css
@@ -1654,6 +1654,17 @@ h1 {
   width: 30vw;
   z-index: 4;
 }
+#splashTitleWeek10 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  text-align: center;
+}
+#splashTitleWeek10 img {
+  position: relative;
+  width: 26vw;
+  margin-top: -3vw;
+  z-index: 4;
+}
 #splash5BackgroundVideo {
   width: 100vw;
   height: 100vh;
@@ -1715,6 +1726,10 @@ h1 {
 }
 .splashArtistListElementIcon {
   margin-left: var(--spacing-1);
+}
+
+#splash5RightContainer {
+  margin-top: 4vh;
 }
 
 #splashBuy {
@@ -1888,6 +1903,25 @@ h1 {
   color: darkred;
   cursor: pointer;
 }
+#splashBuy10 {
+  margin-left: calc((386px / 2) + 44px);
+  margin-top: var(--spacing-2);
+  position: relative;
+  z-index: 2;
+}
+#splashBuy10 button {
+  background: #E000A1;
+  color: #F2F2F2;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 50px;
+  border: none;
+  width: 96px;
+  height: 39px;
+}
+#splashBuy10 button:hover {
+  color: yellow;
+  cursor: pointer;
+}
 
 .splash-eq {
   position: absolute;
@@ -1984,6 +2018,10 @@ h1 {
     height: auto;
     width: 100%;
   }
+  #splashTitleWeek10 img {
+    height: auto;
+    width: 100%;
+  }
   #splashBuy3 {
     margin-left: 0;
     text-align: center;
@@ -2008,11 +2046,17 @@ h1 {
     padding: var(--spacing-2);
     text-align: center;
   }
+  #splashBuy10 {
+    margin: auto;
+    padding: var(--spacing-2);
+    text-align: center;
+  }
   #splashLandingGrid5 {
     padding: 0;
     grid-template: auto auto / auto auto;
   }
   #splash5RightContainer {
+    margin-top: 0;
     grid-column-start: 1;
     grid-column-end: 3;
   }
