--- a/src/global.css
+++ b/src/global.css
@@ -1927,6 +1927,26 @@ h1 {
   color: yellow;
   cursor: pointer;
 }
+#splashBuy11 {
+  margin-left: calc((386px / 2) + 44px);
+  margin-top: var(--spacing-2);
+  position: relative;
+  z-index: 2;
+}
+#splashBuy11 button {
+  background: linear-gradient(82.57deg, #2141E4 0.66%, #FFBDFF 27.66%, #6083FF 49.13%, #91DCFF 65.84%, #FFC0F9 84.5%, #E2C5FF 101.02%, #F7BFFF 114.58%);
+  color: #333333;
+  border-radius: 50px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: none;
+  width: 96px;
+  height: 39px;
+}
+#splashBuy11 button:hover {
+  background: linear-gradient(82.57deg, #2141E4 0.66%, #FFBDFF 27.66%, #6083FF 49.13%, #91DCFF 65.84%, #FFC0F9 84.5%, #E2C5FF 101.02%, #F7BFFF 114.58%);
+  color: #F2F2F2;
+  cursor: pointer;
+}
 
 .splash-eq {
   position: absolute;
@@ -2052,6 +2072,11 @@ h1 {
     text-align: center;
   }
   #splashBuy10 {
+    margin: auto;
+    padding: var(--spacing-2);
+    text-align: center;
+  }
+  #splashBuy11 {
     margin: auto;
     padding: var(--spacing-2);
     text-align: center;
