Adds SoundSplash Week12

--- a/src/global.css
+++ b/src/global.css
@@ -1321,8 +1321,8 @@ h1 {
   align-items: center;
   justify-content: flex-end;
   position: absolute;
-  backdrop-filter: blur(30px);
-  -webkit-backdrop-filter: blur(30px);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
   background: rgba(255, 255, 255, 0.05);
   padding-right: 120px;
   top: 0;
@@ -1947,6 +1947,26 @@ h1 {
   color: #F2F2F2;
   cursor: pointer;
 }
+#splashBuy12 {
+  margin-left: calc((386px / 2) + 44px);
+  margin-top: var(--spacing-2);
+  position: relative;
+  z-index: 2;
+}
+#splashBuy12 button {
+  background: #FFD12E;
+  color: #333333;
+  border-radius: 50px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border: none;
+  width: 96px;
+  height: 39px;
+}
+#splashBuy12 button:hover {
+  color: #F2F2F2;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
 
 .splash-eq {
   position: absolute;
@@ -2077,6 +2097,11 @@ h1 {
     text-align: center;
   }
   #splashBuy11 {
+    margin: auto;
+    padding: var(--spacing-2);
+    text-align: center;
+  }
+  #splashBuy12 {
     margin: auto;
     padding: var(--spacing-2);
     text-align: center;
@@ -2212,6 +2237,37 @@ h1 {
   0%{background-position:0% 97%}
   50%{background-position:100% 4%}
   100%{background-position:0% 97%}
+}
+
+#colorContainerSplashTwelve {
+  background: linear-gradient(27deg, #ff3c3c, #ffe600, #1fd151);
+  background-size: 600% 600%;
+
+  -webkit-animation: WeekTwelveAnimation 30s ease infinite;
+  -moz-animation: WeekTwelveAnimation 30s ease infinite;
+  -o-animation: WeekTwelveAnimation 30s ease infinite;
+  animation: WeekTwelveAnimation 30s ease infinite;
+}
+
+@-webkit-keyframes WeekTwelveAnimation {
+  0%{background-position:86% 0%}
+  50%{background-position:15% 100%}
+  100%{background-position:86% 0%}
+}
+@-moz-keyframes WeekTwelveAnimation {
+  0%{background-position:86% 0%}
+  50%{background-position:15% 100%}
+  100%{background-position:86% 0%}
+}
+@-o-keyframes WeekTwelveAnimation {
+  0%{background-position:86% 0%}
+  50%{background-position:15% 100%}
+  100%{background-position:86% 0%}
+}
+@keyframes WeekTwelveAnimation {
+  0%{background-position:86% 0%}
+  50%{background-position:15% 100%}
+  100%{background-position:86% 0%}
 }
 
 
